kubernetes/apps/observability/ingress/app/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: observability
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-alertmanager
                port:
                  number: 9093
  tls:
    - hosts:
        - alertmanager
