kubernetes/apps/observability/ingress/app/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus
